fix: video description shade overlapping youlag-video-header

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4380,7 +4380,7 @@ body {
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   display: flex;
   justify-content: flex-end;
   padding: var(--yl-p-xs);
